// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualsTable Mock query for deleteIdentity 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for merge 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for moveIdentity 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for unmerge 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for updateEnrollment 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for withdraw 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`Jobs Mock mutation for affiliate 1`] = `
<section>
  <jobs-table-stub
    getjobs="[Function]"
  />
  <v-snackbar-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    color="error"
    contained="false"
    disabled="false"
    eager="false"
    location="bottom"
    locationstrategy="static"
    modelvalue="true"
    multiline="false"
    openonhover="false"
    origin="auto"
    text=""
    tile="false"
    timeout="5000"
    timer="false"
    transition="v-snackbar-transition"
    variant="elevated"
    vertical="false"
    zindex="2000"
  />
</section>
`;

exports[`Jobs Mock mutation for genderize 1`] = `
<section>
  <jobs-table-stub
    getjobs="[Function]"
  />
  <v-snackbar-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    color="error"
    contained="false"
    disabled="false"
    eager="false"
    location="bottom"
    locationstrategy="static"
    modelvalue="true"
    multiline="false"
    openonhover="false"
    origin="auto"
    text=""
    tile="false"
    timeout="5000"
    timer="false"
    transition="v-snackbar-transition"
    variant="elevated"
    vertical="false"
    zindex="2000"
  />
</section>
`;

exports[`Jobs Mock mutation for unify 1`] = `
<section>
  <jobs-table-stub
    getjobs="[Function]"
  />
  <v-snackbar-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    color="error"
    contained="false"
    disabled="false"
    eager="false"
    location="bottom"
    locationstrategy="static"
    modelvalue="true"
    multiline="false"
    openonhover="false"
    origin="auto"
    text=""
    tile="false"
    timeout="5000"
    timer="false"
    transition="v-snackbar-transition"
    variant="elevated"
    vertical="false"
    zindex="2000"
  />
</section>
`;

exports[`OrganizationsTable Mock mutation for addDomain 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;

exports[`OrganizationsTable Mock mutation for addOrganization 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;

exports[`OrganizationsTable Mock mutation for deleteDomain 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;

exports[`OrganizationsTable Mock mutation for deleteOrganization 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;

exports[`OrganizationsTable Mock mutation for enroll 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;

exports[`ProfileModal Mock mutation for addIdentity 1`] = `
<v-dialog-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  disabled="false"
  eager="false"
  fullscreen="false"
  location="bottom"
  locationstrategy="static"
  maxwidth="670"
  modelvalue="false"
  noclickanimation="false"
  openonhover="false"
  origin="center center"
  persistent="true"
  retainfocus="true"
  scrim="true"
  scrollable="false"
  scrollstrategy="block"
  transition="[object Object]"
  zindex="2400"
/>
`;

exports[`ProfileModal Mock mutation for updateProfile 1`] = `
<v-dialog-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  disabled="false"
  eager="false"
  fullscreen="false"
  location="bottom"
  locationstrategy="static"
  maxwidth="670"
  modelvalue="false"
  noclickanimation="false"
  openonhover="false"
  origin="center center"
  persistent="true"
  retainfocus="true"
  scrim="true"
  scrollable="false"
  scrollstrategy="block"
  transition="[object Object]"
  zindex="2400"
/>
`;
